Migrate p4java to r17-2, but make it JDK6 compatible.  Tricky.